sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: '<-' expected but ')' found.
for (l<1 to 20){
              ^AlgBubbleSort1:17: error: illegal start of simple expression
}
^